# ardrone_demonstrations_York

./: .cproject  .project  CMakeLists.txt  README.md  bd_send_land.sh  bd_send_reset.sh  bluedanube.sh  package.xml  ping_drones.sh  send_land.sh  send_reset.sh  ta_send_land.sh  ta_send_reset.sh
include/: Drone.h  LocateTarget.h  TargetAggregation.h
launch/: ardrone_basic.launch  ardrone_detect_cocarde_v.launch  autopilot_joystick_multi.launch  bd_64.launch  bd_66.launch  bd_68.launch  bluedanube_64.launch  bluedanube_driver.launch  bluedanube_run.launch  joystick-controlled-drone.launch  ta_64.xml  ta_66.xml  ta_68.xml
src/: BlueDanube.cpp  BlueDanubeL.cpp  BlueDanubeR.cpp  DetectTarget.cpp  Drone.cpp  FlashLEDs.cpp  LocateTarget.cpp  LocateTargetJoystickControl.cpp  TargetAggregation.cpp  TargetAggregationJoystickControl.cpp  basic ros code.cpp  echoTUMCommands.py  joystick2TUMARDroneInterpreter.py  joystick_controller.py  main_LocateTarget.cpp  main_LocateTargetJoystick.cpp  main_TargetAggregation.cpp  main_TargetAggregationJoystick.cpp  test_drone.cpp  usingSubscriptionsDemo.cpp
